// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Locale switcher component renders English index switcher correctly 1`] = `
<div>
  <a
    class="sc-eCstlR jRFHTL"
    href="/"
  >
    <span
      class="sc-bdfBQB sc-gsTEea dYkFUz jefdCI"
    >
      Suomeksi
    </span>
  </a>
  <br />
  ,
</div>
`;

exports[`Locale switcher component renders Finnish index switcher correctly 1`] = `
<div>
  <a
    class="sc-eCstlR jRFHTL"
    href="/en"
  >
    <span
      class="sc-bdfBQB sc-gsTEea dYkFUz jefdCI"
    >
      In English
    </span>
  </a>
  <br />
  ,
</div>
`;
